--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.78MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
-  - {name: 🇨🇳 中国-4.68MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇺🇸 美国-5.52MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.25MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-168.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 塞浦路斯-639.7KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 134.195.196.128, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-22.45MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: 46ceba76-28b9-37df-8b08-b288e75aa646, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.24MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇳 中国-5.76MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-9.89MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.68MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
+      - 塞浦路斯-639.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
+      - 塞浦路斯-639.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
+      - 塞浦路斯-639.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
+      - 塞浦路斯-639.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
+      - 塞浦路斯-639.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
+      - 塞浦路斯-639.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
+      - 塞浦路斯-639.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
