--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-168.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 塞浦路斯-639.7KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 134.195.196.128, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-22.45MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: 46ceba76-28b9-37df-8b08-b288e75aa646, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.24MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-5.54MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-4.71MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.58MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 4a3ad34e-a12c-4e72-8fcb-47accba9e218, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-3.48MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.76MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-9.89MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.68MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.87MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇬🇧 英国-3.06MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
-      - 塞浦路斯-639.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
-      - 塞浦路斯-639.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
-      - 塞浦路斯-639.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
-      - 塞浦路斯-639.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
-      - 塞浦路斯-639.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
-      - 塞浦路斯-639.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-168.3KB/s(Youtube:不良林)
-      - 塞浦路斯-639.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
 rules:
